# templates

./: LICENSE.cc-by-nc-sa  README.md  c.Makefile  latex.Makefile  python.gitignore  setup-template.sh
C/: gitignore
alt-latex/: gitignore
cmake/: .travis.yml  CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/test/: CMakeLists.txt
experiment/: exp.latex
latex/: Makefile  gitignore
latex-beamer/: Makefile  presentation.latex
latex-report/: Makefile  report.latex
markdown/: document  gitignore
python/: .travis.yml  gitignore
